[gd_scene load_steps=6 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/slot.gd" type="Script" id=1]
[ext_resource path="res://AlgorithmScenes/Screen/structure_slot_background.png" type="Texture" id=2]

[sub_resource type="StyleBoxTexture" id=1]
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.909804, 0.941176, 0.490196, 1 )

[node name="Slot" type="Panel"]
anchor_right = 0.0416667
anchor_bottom = 0.0740741
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SlotTexture" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 49.1249, 11.359 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SlotTexture"]
margin_right = 80.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="SlotTexture"]
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotTexture/Area2D"]
position = Vector2( 40, 40 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 19.5854, 19.5854 )
z_index = 2
z_as_relative = false

[node name="HoverText" type="Label" parent="Node2D"]
visible = false
margin_left = 6.12493
margin_top = 11.359
margin_right = 49.1249
margin_bottom = 25.359
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Queue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="SlotTexture/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SlotTexture/Area2D" to="." method="_on_Area2D_mouse_exited"]
